# SongshGeo-as-Scholar

./: .gitignore  LICENSE.md  Makefile  My-Publications.bib  README.md  go.mod  netlify.toml  pyproject.toml
.github/workflows/: README.md  docs.yml  hugo.yaml  hugo.yml  preview.yaml  preview.yml  production.yaml
assets/scss/: custom.scss
config/_default/: config.yaml  menus.yaml  params.yaml
content/Publications/paper1/: index.md
content/Publications/paper10/: index.md
content/Publications/paper11/: cite.bib
content/Publications/paper12/: index.md
content/Publications/paper15/: cite.bib
content/Publications/paper2/: cite.bib
content/Publications/paper5/: index.md
content/Publications/paper6/: index.md
content/Publications/paper7/: cite.bib
content/Recent Publications/paper1/: cite.bib
content/Recent Publications/paper11/: index.md
content/Recent Publications/paper13/: cite.bib
content/Recent Publications/paper14/: index.md
content/Recent Publications/paper3/: index.md
content/Recent Publications/paper6/: cite.bib
content/authors/admin/: _index.md
content/home/: accomplishments.md  contact.md  demo.md  experience.md  featured.md  hero.md  projects.md  publications.md  skills.md  tags.md
docs/: DEPLOYMENT.md  DOCS_DEPLOYMENT.md  MAINTENANCE_GUIDE.md  QUICKSTART.md  README.md  SCRIPTS_CHANGELOG.md  SETUP_COMPLETE.md  WORKFLOW.md  _navbar.md  _sidebar.md  index.html
scripts/: README.md  check_missing_publications.py  check_missing_publications_enhanced.py  create_publication_template.py  extract_abstract_from_pdf.py  logger_config.py
(+92 files in other folders)
