[project]
name = "songshgeo-cv-site"
version = "0.1.0"
description = "Manage my academic life and publications"
authors = [
    {name = "SongshGeo",email = "songshgeo@gmail.com"}
]
license = {text = "MIT"}
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "PyYAML>=6.0",
    "loguru>=0.7.0",
]

[project.optional-dependencies]
pdf-extraction = [
    "langchain>=0.1.0",
    "langchain-community>=0.0.20",
    "langchain-openai>=0.0.5",
    "openai>=1.12.0",
    "pypdf>=4.0.0",
    "python-dotenv>=1.0.0",
]

[tool.poetry]
package-mode = false

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
